update phpcs to 3.0

--- a/composer.json
+++ b/composer.json
@@ -14,5 +14,8 @@
             "email": "will.pillar@graze.com"
         }
     ],
-    "require": {}
+    "require": {},
+    "require-dev": {
+        "squizlabs/php_codesniffer": "^3.0@dev"
+    }
 }
