--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,6 @@
     ],
     "require": {},
     "require-dev": {
-        "squizlabs/php_codesniffer": "^3.0@dev"
+        "squizlabs/php_codesniffer": "^3.0"
     }
 }
