--- a/composer.json
+++ b/composer.json
@@ -10,8 +10,8 @@
     "license": "MIT",
     "authors": [
         {
-            "name": "Will Pillar",
-            "email": "will.pillar@graze.com"
+            "name": "Graze Developers",
+            "email": "developers@graze.com"
         }
     ],
     "require": {},
