update phpcs to 3.0 (#29)
* update phpcs to 3.0

* use official phpcs v3 version

* little changes

* add travis build info

* remove composer.lock

* remove un-needed assignments

* ensure cache directory exists

* ensure cache directory exists in travis

--- a/composer.json
+++ b/composer.json
@@ -10,9 +10,12 @@
     "license": "MIT",
     "authors": [
         {
-            "name": "Will Pillar",
-            "email": "will.pillar@graze.com"
+            "name": "Graze Developers",
+            "email": "developers@graze.com"
         }
     ],
-    "require": {}
+    "require": {},
+    "require-dev": {
+        "squizlabs/php_codesniffer": "^3.0"
+    }
 }
