--- a/.travis.yml
+++ b/.travis.yml
@@ -13,6 +13,8 @@ php:
 - nightly
 matrix:
   fast_finish: true
+  allow_failures:
+  - php: nightly
 before_install:
 - sudo apt-get update
 - sudo apt-get -y -o Dpkg::Options::="--force-confnew" install docker-ce
